--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,6 +71,7 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
+  text-decoration: none;
   border-radius: 26px;
   box-shadow: 0 4px 12px rgba(45, 52, 64, 0.1);
   padding: 12px 32px;
@@ -146,6 +147,7 @@ body {
   padding-top: 8px;
   padding-bottom: 8px;
   margin-bottom: 16px;
+  font-size: 14px;
 }
 
 .button-pink:hover {
@@ -201,8 +203,9 @@ body {
 }
 
 .page-navigation {
-  flex-grow: 1;
-  margin-top: 10px;
+  margin-right:auto;
+  margin-top: 12px;
+  max-width: 605px;
 }
 
 .page-navigation-list {
@@ -213,6 +216,10 @@ body {
   padding: 0;
   margin: 0;
   margin-left: 16px;
+}
+
+.page-navigation-item {
+  margin-bottom: 10px;
 }
 
 .page-navigation-catalog {
@@ -276,8 +283,9 @@ body {
   box-shadow: 0 8px 16px rgba(45, 52, 64, 0.12);
   border-radius: 4px;
   z-index: 10;
-  margin-top: 16px;
-  padding: 8px 0
+  margin-top: 8px;
+  margin-left:1px;
+  padding: 10px 0
 }
 
 .page-navigation-catalog-open .page-catalog-list {
@@ -353,13 +361,14 @@ body {
   font-family: inherit;
   font-size: 14px;
   line-height: 20px;
+  text-decoration: none;
   color: #2d3440;
   padding: 6px 16px;
   border-radius: 30px;
   background-color: rgba(252, 252, 252, 0.3);
   border: none;
   min-height: 32px;
-  margin-left: 16px;
+  margin-left: 18px;
   cursor: pointer;
 }
 
@@ -469,7 +478,7 @@ body {
 .user-basket-item {
   display: flex;
   align-items: center;
-  margin-bottom: 24px;
+  margin-bottom: 22px;
 }
 
 .user-basket-item:last-child {
@@ -477,7 +486,7 @@ body {
 }
 
 .user-basket-product {
-  width: 187px;
+  width: 150px;
   margin-right: 16px;
 }
 
@@ -553,7 +562,7 @@ body {
   line-height: 20px;
   color: #2d3440;
   text-decoration: none;
-  margin-top: 18px;
+  margin-top: 19px;
 }
 
 .slider-promo {
@@ -580,7 +589,8 @@ body {
 }
 
 .slider-promo-text {
-  width: 470px;
+  width: 445px;
+  margin-right: 30px;
 }
 
 .slider-promo-text,
@@ -827,7 +837,7 @@ body {
 
 .products-catalog {
   padding-bottom: 80px;
-  margin-bottom: 60px;
+  margin-bottom: 50px;
   border-bottom: 1px solid rgba(252, 252, 252, 0.3);
 }
 
@@ -1415,6 +1425,10 @@ body {
   margin-bottom: 16px;
 }
 
+.filter-form-group:last-of-type {
+  margin-right:16px;
+}
+
 .filter-form-list {
   display: flex;
   list-style: none;
@@ -1601,7 +1615,7 @@ body {
   display: none;
 }
 
-.control:hover .control-checkbox path,
+.control:hover path,
 .control-input:hover ~ .control-checkbox path{
   fill: #fcfcfc;
 }
@@ -1611,19 +1625,25 @@ body {
   opacity:0.4;
 }
 
+.control-input:focus ~ .control-radio,
+.control-input:focus ~ .control-checkbox {
+  outline: 1px solid #565c66;
+}
+
 .pagination {
   display: flex;
   align-items: center;
 }
 
 .pagination .button {
-  margin-left: 487px;
+  margin-left: 50%;
+  transform: translateX(calc(-50% - 7px));
 }
 
 .pagination-list {
   display: flex;
   list-style: none;
-  margin: 0;
+  margin: 5px 0 0 0;
   padding: 0;
   margin-left: auto;
 }
@@ -1664,13 +1684,13 @@ body {
 .pagination-back .pagination-link {
   background-image: url("../images/icons/arrow-paginaton.svg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 5px center;
 }
 
 .pagination-forward .pagination-link {
   background-image: url("../images/icons/arrow-paginaton.svg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 5px center;
   transform: rotate(180deg);
 }
 
